npm installed normalize.css to enhance cross browser compatibility, fixed overlap of thumbnail and book div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ html,body {
 }
 
 .thumbnail {
-	margin: 10 0 30 0;
+	margin: 2% 0 4% 0;
   width: 30%;
   height: 55%;
   border: 3px black solid;
